Squashed 'devenv-4-iom/' changes from 8035aee..2458c00
2458c00 Merge pull request #4 from intershop/story/71327-single-image
6ac3d5b #71370 updated version
f5681d4 #71370 reworked documentation
07088e4 #71370 reworked documentation
8b3bf37 #71370 reworked documentation
4259349 #71370 reworked documentation
0015af5 #71370 reworked documentation
dbcc6cd #71370 reworked documentation
a994b5b #71370 reworked documentation
c5c55ad #71370 reworked documentation
189aa8d #71370 reworked documentation
354d0aa #71370 reworked documentation
03d5548 #71370 reworked documentation
613acf5 #71370 reworked documentation
dfd28ae #71370 reworked documentation
30033e4 #71370 reworked documentation
691f1b1 #71370 reworked documentation
df51d41 #71370 reworked documentation
34c9bee #71370 reworked documentation
0150242 #71370 reworked documentation
fc96daa #71370 reworked documentation
07bd83f #71370 reworked documentation
6a1f1b5 #71370 reworked documentation
66bfe07 #71370 reworked documentation
6e476b9 #71370 reworked documentation
18c299e #71370 reworked documentation
b84a598 #71370 reworked documentation
8bf8aa3 #71370 reworked documentation
33795c8 #71370 reworked documentation
96dbfdd #71370 reworked documentation
a1263b3 #71370 fixed formatting of help text
867f356 #71370 reworked documentation
d3b6646 #71370 reworked documentation
38e15f3 #71370 reworked documentation
ef8e891 #71370 removed wait command
4c2c0cc #71370 reworked documentation
4c5161b #71370 reworked documentation
152e303 #71370 reworked documentation
61ba317 #71370 reworked documentation
96c6f89 #71370 reworked documentation
620cd57 #71370 reworked log documentation and implementation
b18f86f #72243 updated docu
ba4eb4d #71370 improved comments in config template
157e190 #72243 updated docu
feb011a #71370 fixed commands displayed by "info iom"
dbe89c5 #72243 updated docu
85a21f0 #72243 updated docu
7b644ee #71370 added new option for 'get config'
5850515 #72243 reworked "first steps" section
0838054 #71370 fixed 

--- a/templates/apply-sql.yml.template
+++ b/templates/apply-sql.yml.template
@@ -10,7 +10,7 @@ spec:
       - name: ${IMAGE_PULL_SECRET}
       containers:
       - name: apply-sql
-        image: ${IOM_CONFIG_IMAGE}
+        image: ${IomJobImage}
         imagePullPolicy: ${IMAGE_PULL_POLICY}
         env:
           - name: TENANT
@@ -33,7 +33,7 @@ spec:
             value: '${OMS_LOGLEVEL_SCRIPTS}'
           - name: CAAS_ENV_NAME
             value: '${PROJECT_ENV_NAME}'
-        command: [ '/opt/apply_sql.sh', '--src=/tmp/sql-dir-volume/${sqlFile}' ]
+        command: [ '${ConfigBinDir}/apply_sql.sh', '--src=/tmp/sql-dir-volume/${sqlFile}' ]
         volumeMounts:
         - name: sql-dir-volume
           mountPath: /tmp/sql-dir-volume
