use local repository

--- a/devenv.project.properties
+++ b/devenv.project.properties
@@ -31,7 +31,7 @@ ID="iomblueprint"
 # always the newest version of the requested Docker image will be used. It can
 # be set to any value allowed by ImagePullPolicy.
 # See https://kubernetes.io/docs/concepts/configuration/overview/#container-images
-IMAGE_PULL_POLICY=Always
+IMAGE_PULL_POLICY=IfNotPresent
 
 # Name of Kubernetes secret to be used, if authentication at a private Docker
 # registry is required. The secret has to be created manually in default
@@ -53,21 +53,21 @@ MAILHOG_IMAGE=mailhog/mailhog
 # examples:
 # local image:                      iom-dbaccount:1.3.0.0
 # release from ISH Docker registry: docker.intershop.de/intershophub/iom-dbaccount:1.3.0.0
-IOM_DBACCOUNT_IMAGE=docker.intershop.de/intershophub/iom-dbaccount:1.3.0.0
+IOM_DBACCOUNT_IMAGE=docker-internal.rnd.intershop.de/intershophub/iom-dbaccount:1.3.0.0
 
 # iom config image (name:tag)
 # examples:
 # local image:                      iom-config:3.7.0.0
 # locally built project image:      prj-iom-config:3.7.0.0-1.2.0.0-SNAPSHOT
 # IOM release from ISH registry:    docker.intershop.de/intershophub/iom-config:3.7.0.0
-IOM_CONFIG_IMAGE=
+IOM_CONFIG_IMAGE=docker.io/library/iom-blueprint-project-iom-config:1.0.0-SNAPSHOT
 
 # iom app image (name:tag)
 # examples:
 # local image:                      iom-app:3.7.0.0
 # locally built project image:      prj-iom-app:3.7.0.0-1.2.0.0-SNAPSHOT
 # IOM release from ISH registry:    docker.intershop.de/intershophub/iom-app:3.7.0.0
-IOM_APP_IMAGE=
+IOM_APP_IMAGE=docker.io/library/iom-blueprint-project-iom-app:1.0.0-SNAPSHOT
 
 # iom image (name:tag)
 # beginning with IOM 4 the distribution model of IOM was changed from two to one
