#73688: added CUSTOM_*_DIR properties, adjusted setevn.sh

--- a/devenv.project.properties
+++ b/devenv.project.properties
@@ -192,7 +192,7 @@ OMS_LOG_REST_IDS=
 # In case of WSL2 (and only in this particular case), MOUNT_PREFIX has to be
 # set to /run/desktop/mnt/host. In any other case, it must remain empty.
 
-MOUNT_PREFIX=""
+MOUNT_PREFIX="/run/desktop/mnt/host"
 
 ################################################################################
 # Development settings
@@ -213,15 +213,15 @@ MOUNT_PREFIX=""
 
 # Deployment of custom artifacts
 # see: devenv-cli.sh apply deployment --help
-CUSTOM_APPS_DIR=""
+CUSTOM_APPS_DIR="${DEVENV_SHARE_BASE_PATH}/target"
 
 # Development of custom mail templates
 # See: devenv-cli.sh apply mail-templates --help
-CUSTOM_TEMPLATES_DIR=""
+CUSTOM_TEMPLATES_DIR="${DEVENV_SHARE_BASE_PATH}/src/mail-templates"
 
 # Development of custom XSL templates
 # See: devenv-cli.sh apply xsl-templates --help
-CUSTOM_XSLT_DIR=""
+CUSTOM_XSLT_DIR="${DEVENV_SHARE_BASE_PATH}/src/xsl-templates"
 
 # Development of migration scripts
 # See: devenv-cli.sh apply dbmigrate --help
@@ -234,7 +234,7 @@ CUSTOM_DUMPS_DIR=""
 
 # Development of custom sql-config
 # See: devenv-cli.sh apply sql-config --help
-CUSTOM_SQLCONF_DIR=""
+CUSTOM_SQLCONF_DIR="${DEVENV_SHARE_BASE_PATH}/target/sql-config"
 
 # Development of custom json-config
 # See: devenv-cli.sh apply json-config --help
@@ -257,7 +257,7 @@ CUSTOM_JSONCONF_DIR=""
 # will be used as base directory for the relative path.
 # If no project specific configuration file exists at all, a relative path
 # will be expanded relative to the current working directory.
-CUSTOM_SHARE_DIR=""
+CUSTOM_SHARE_DIR="${DEVENV_SHARE_BASE_PATH}/devenv-share"
 
 ################################################################################
 # Multi-instance settings
