--- a/devenv.project.properties
+++ b/devenv.project.properties
@@ -213,15 +213,15 @@ MOUNT_PREFIX="/run/desktop/mnt/host"
 
 # Deployment of custom artifacts
 # see: devenv-cli.sh apply deployment --help
-CUSTOM_APPS_DIR="${DEVENV_SHARE_BASE_PATH}/target"
+CUSTOM_APPS_DIR="target"
 
 # Development of custom mail templates
 # See: devenv-cli.sh apply mail-templates --help
-CUSTOM_TEMPLATES_DIR="${DEVENV_SHARE_BASE_PATH}/src/mail-templates"
+CUSTOM_TEMPLATES_DIR="src/mail-templates"
 
 # Development of custom XSL templates
 # See: devenv-cli.sh apply xsl-templates --help
-CUSTOM_XSLT_DIR="${DEVENV_SHARE_BASE_PATH}/src/xsl-templates"
+CUSTOM_XSLT_DIR="src/xsl-templates"
 
 # Development of migration scripts
 # See: devenv-cli.sh apply dbmigrate --help
@@ -234,7 +234,7 @@ CUSTOM_DUMPS_DIR=""
 
 # Development of custom sql-config
 # See: devenv-cli.sh apply sql-config --help
-CUSTOM_SQLCONF_DIR="${DEVENV_SHARE_BASE_PATH}/target/sql-config"
+CUSTOM_SQLCONF_DIR="target/sql-config"
 
 # Development of custom json-config
 # See: devenv-cli.sh apply json-config --help
@@ -257,7 +257,7 @@ CUSTOM_JSONCONF_DIR=""
 # will be used as base directory for the relative path.
 # If no project specific configuration file exists at all, a relative path
 # will be expanded relative to the current working directory.
-CUSTOM_SHARE_DIR="${DEVENV_SHARE_BASE_PATH}/devenv-share"
+CUSTOM_SHARE_DIR="devenv-share"
 
 ################################################################################
 # Multi-instance settings
