#73688: change environment to 'dev', change log level

--- a/devenv.project.properties
+++ b/devenv.project.properties
@@ -117,7 +117,7 @@ OMS_DB_NAME="oms_db"
 
 # Projects may have environment specific configurations, test data, etc.
 # PROJECT_ENV_NAME assigns the environment name to the installation.
-PROJECT_ENV_NAME=ci
+PROJECT_ENV_NAME=dev
 
 # Projects may contain test data which are automatically imported when
 # starting IOM if this propertie is set to 'true'. If import is not finished
@@ -163,11 +163,11 @@ KEEP_DATABASE_DATA=true
 # Log level for different scopes of iom-application. Supported levels are:
 #   FATAL, ERROR, WARN, INFO, DEBUG, TRACE, ALL
 OMS_LOGLEVEL_CONSOLE=WARN
-OMS_LOGLEVEL_IOM=WARN
+OMS_LOGLEVEL_IOM=INFO
 OMS_LOGLEVEL_HIBERNATE=WARN
 OMS_LOGLEVEL_QUARTZ=WARN
 OMS_LOGLEVEL_ACTIVEMQ=WARN
-OMS_LOGLEVEL_CUSTOMIZATION=WARN
+OMS_LOGLEVEL_CUSTOMIZATION=INFO
 
 # Log level of helper scripts (dbmigrate, etc.). Supported levels are:
 #   ERROR, WARN, INFO, DEBUG
