Squashed 'devenv-4-iom/' changes from 2458c00..101c5da
101c5da Merge pull request #9 from intershop/hotfix/2.0
f64406b #74659 updated "fixed bugs"
81ac98f #74659 updated version
26bc284 #74659 image pull secrets missing in apply-sql-config job
76db68c #74343 updated version
40aae84 Merge pull request #8 from intershop/task/74343-release-docu
c32fb22 #74343 removed obsolte file
6f79e1f review, almost done - waiting for feedback on what to do with Confluence links
d74d812 review
293337e Review docs: readme and 00 - 02
9eb0e3f minor adjustment
bb88e84 #74343 added release documentation
1168689 #74343 added release documentation
f9c4d1d #74343 added release documentation
f685d26 #74343 added release documentation
64f1ac7 Merge pull request #6 from intershop/task/73923-force-context
82ad442 Merge pull request #7 from intershop/task/73905-guideUpdate
7eabca6 #73905: Docker documentation updates for WSL2
659d92b #73923 force usage of kubernetes context
653aa37 #73923 force usage of kubernetes context
3d2193c Merge pull request #5 from intershop/task/73739-config-of-sqlhash
397184c #73739 fixed naming of env-vars and directories
7008f62 #73739 added configuration variable for OMS_DB_SQLHASH

git-subtree-dir: devenv-4-iom
git-subtree-split: 101c5da7024fbc35d2381513af048b2ce60282f2

--- a/templates/config.properties.template
+++ b/templates/config.properties.template
@@ -22,6 +22,11 @@
 # - kube
 ID="${ID}"
 
+# kubectl is able to work with different Kubernetes clusters. The Kubernetes
+# context determines, which cluster is controlled by kubectl. This configuration
+# variable defines the Kubernetes context to be used by devenv-4-iom.
+KUBERNETES_CONTEXT="${KUBERNETES_CONTEXT}"
+
 ################################################################################
 # Docker Image Settings
 ################################################################################
@@ -110,6 +115,15 @@ OMS_DB_SEARCHPATH="${OMS_DB_SEARCHPATH}"
 OMS_DB_USER="${OMS_DB_USER}"
 OMS_DB_PASS="${OMS_DB_PASS}"
 OMS_DB_NAME="${OMS_DB_NAME}"
+
+# Enable/Disable SQL-Hashes
+# During image creation, hashes are created and stored within the image, that
+# are stored within the DB after according SQL-scripts were executed, to avoid
+# repeated execution of SQL-scripts. In a development environment these hashes
+# must be ignored. But there are special cases, that need the posibility of
+# configuration of this feature.
+# Allowed values are true|false
+OMS_DB_SQLHASH="${OMS_DB_SQLHASH}"
 
 ################################################################################
 # IOM Runtime Configuration
