--- a/templates/sqlconfig.yml.template
+++ b/templates/sqlconfig.yml.template
@@ -6,6 +6,8 @@ spec:
   ttlSecondsAfterFinished: 100
   template:
     spec:
+      imagePullSecrets:
+      - name: ${IMAGE_PULL_SECRET}
       containers:
       - name: sqlconfig
         image: ${IomJobImage}
