--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,6 +16,5 @@ trigger:
 # see https://developercommunity.visualstudio.com/t/pipeline-template-from-other-repository/498657
 extends:
   template: template.yml@IOMDevopsRepo
-  parameters:
-    param1: Test1
-    param2: Test2
+#  parameters:
+    
