#76533 use pipeline template

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,4 +17,4 @@ extends:
   template: template.yml@IOMDevopsRepo
   parameters:
     MavenProject: order-iom-blueprint
-    
+    SCDockerRepoIOM: order-iom-docker.intershop.de.dockerhub
