#76533 use pipeline template

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,3 +25,5 @@ extends:
     ACRRepoCI:                          ci/
     ACRRepoSnapshot:                    snapshot/
     ACRRepoRelease:                     ''
+    AKSServiceConnection:               oder-iom-aks-ci-blueprint
+    AKSNamespace:                       blueprint
