--- a/devenv-4-iom/templates/iom.yml.template
+++ b/devenv-4-iom/templates/iom.yml.template
@@ -133,6 +133,8 @@ ${ShareDirYml____}          mountPath: /var/opt/share
             value: 'mailhog-service'
           - name: OMS_SMTP_PORT
             value: '${PORT_MAILHOG_SMTP_SERVICE}'
+          - name: OMS_MAIL_RESOURCES_BASE_URL
+            value: 'http://${HostIom}:${PORT_IOM_SERVICE}/mailimages/customers'
         lifecycle:
           postStart:
             exec:
