--- a/devenv.project.properties
+++ b/devenv.project.properties
@@ -79,7 +79,7 @@ IOM_APP_IMAGE=
 # local image:                      iom:4.0.0.0
 # locally built project image:      prj-iom:4.0.0.0-1.2.0.0-SNAPSHOT
 # IOM release from ISH registry:    docker.intershop.de/intershophub/iom:4.0.0.0
-IOM_IMAGE=docker.io/library/iom-blueprint-project-iom:1.1.0-SNAPSHOT
+IOM_IMAGE=docker.io/library/iom-blueprint-project-iom:1.1.0
 
 ################################################################################
 # Database Configuration
