--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,10 +16,10 @@ trigger:
 extends:
   template: template.yml@IOMDevopsRepo
   parameters:
-    agentPool:                          ubuntu-20.4-DS4_v2-adopt-adoptium-jdk-ora
+    AgentPool:                          ubuntu-20.4-DS4_v2-adopt-adoptium-jdk-ora
     ArtifactsFeed:                      order-iom-blueprint
     DockerRepoIOMServiceConnection:     order-iom-docker.intershop.de.dockerhub
-    DockerRepoIOMName:                  docker.intershop.de/intershophub/
+    DockerRepoIOM:                      docker.intershop.de/intershophub/
     ACRServiceConnection:               order-iomci-ISH-ENG-IOM
     ACRName:                            iomci
     ACRHost:                            iomci.azurecr.io
