--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,6 +19,6 @@ extends:
     AgentPool:                          ubuntu-20.4-DS4_v2-adopt-adoptium-jdk-ora
     ArtifactsFeed:                      order-iom-blueprint
     DockerRepoIOMServiceConnection:     order-iom-docker.intershop.de.dockerhub
-    DockerRepoIOM:                      docker.intershop.de/intershophub/
+    DockerRepoIOM:                      docker.intershop.de/intershophub
     ACRServiceConnection:               order-iomci-ISH-ENG-IOM
     ACR:                                iomci.azurecr.io/
