--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,7 +4,7 @@ resources:
     - repository: IOMDevopsRepo
       type: git
       name: order-iom-partner-devops
-      ref: task/76533-ci-pipeline
+      ref: develop
 
 trigger:
   branches:
