#76533 switched back to maven repo order-iom-releases

--- a/pom.xml
+++ b/pom.xml
@@ -28,8 +28,8 @@
 
     <repositories>
         <repository>
-            <id>order-iom-blueprint</id>
-            <url>https://pkgs.dev.azure.com/intershop-com/Products/_packaging/order-iom-blueprint/maven/v1</url>
+            <id>order-iom-releases</id>
+            <url>https://pkgs.dev.azure.com/intershop-com/Products/_packaging/order-iom-releases/maven/v1</url>
             <releases>
                 <enabled>true</enabled>
             </releases>
