--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -17,6 +17,11 @@
         <servlet-name>ImportStatus</servlet-name>
         <servlet-class>com.intershop.oms.ps.servlet.ImportStatus</servlet-class>
     </servlet>
+    <servlet>
+        <display-name>ProductUpload</display-name>
+        <servlet-name>ProductUpload</servlet-name>
+        <servlet-class>com.intershop.oms.blueprint.upload.ProductUpload</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>Heartbeat</servlet-name>
         <url-pattern>/Heartbeat/*</url-pattern>
@@ -29,4 +34,13 @@
         <servlet-name>ImportStatus</servlet-name>
         <url-pattern>/ImportStatus</url-pattern>
     </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ImportErrors</servlet-name>
+        <url-pattern>/ImportErrors</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ProductUpload</servlet-name>
+        <url-pattern>/ProductUpload</url-pattern>
+    </servlet-mapping>
+
 </web-app>
