Squashed 'devenv-4-iom/' changes from e658719..b4d20bf
b4d20bf Merge pull request #15 from intershop/develop
ea3ab08 Merge pull request #14 from intershop/task/76952-roll-back-mail-images
782ee45 fix: rolled back setting of mail resources base url
cc58231 docs: updated list of fixed bugs
545f24a Merge pull request #12 from intershop/bug/77223-missing-master-label
fb5b286 Merge pull request #13 from intershop/bug/77268-wrong-doc-reference
367c6dd #77223 use control-plain instead of master for postgres storage
3edb871 #77223 applying master role was rolled back in favor to use a different role
53bed4c fix: fixed links to external documentation
64c7f24 fix(iom): apply role master to first node, if this role is not already applied (#77223)

git-subtree-dir: devenv-4-iom
git-subtree-split: b4d20bfe76dc230d6ed0bf0769d52ffc59711a05

--- a/templates/postgres-storage.yml.template
+++ b/templates/postgres-storage.yml.template
@@ -22,9 +22,9 @@ spec:
   nodeAffinity:
     required:
       nodeSelectorTerms:
-      # consider that there is only one node (master) in the cluster
+      # consider that there is only one node (control-plane) in the cluster
       - matchExpressions:
-        - key: node-role.kubernetes.io/master
+        - key: node-role.kubernetes.io/control-plane
           operator: Exists
       # - matchExpressions:
       #   - key: kubernetes.io/hostname
