Squashed 'devenv-4-iom/' changes from b4d20bf..f1ad43b
f1ad43b Merge pull request #17 from intershop/develop
4072427 fix: set both "CAAS_" / "PROJECT_" vars (#16)

git-subtree-dir: devenv-4-iom
git-subtree-split: f1ad43b9323e3e865465fc679e07181aa03762cf

--- a/templates/apply-sql.yml.template
+++ b/templates/apply-sql.yml.template
@@ -33,6 +33,8 @@ spec:
             value: '${OMS_LOGLEVEL_SCRIPTS}'
           - name: CAAS_ENV_NAME
             value: '${PROJECT_ENV_NAME}'
+          - name: PROJECT_ENV_NAME
+            value: '${PROJECT_ENV_NAME}'
         command: [ '${ConfigBinDir}/apply_sql.sh', '--src=/tmp/sql-dir-volume/${sqlFile}' ]
         volumeMounts:
         - name: sql-dir-volume
