--- a/templates/dbmigrate.yml.template
+++ b/templates/dbmigrate.yml.template
@@ -33,6 +33,8 @@ spec:
             value: '${OMS_LOGLEVEL_SCRIPTS}'
           - name: CAAS_ENV_NAME
             value: '${PROJECT_ENV_NAME}'
+          - name: PROJECT_ENV_NAME
+            value: '${PROJECT_ENV_NAME}'
         command: [ '${ConfigBinDir}/dbmigrate-kubernetes.sh', '--dir=/tmp/dbmigrate-volume' ]
         volumeMounts:
 ${DbmigrateDirYml}        - name: dbmigrate-volume
